--- a/index.html
+++ b/index.html
@@ -14,47 +14,57 @@
 
     <title>Frontend Mentor | NFT preview card component</title>
 
-    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-    <style>
-      .attribution {
-        font-size: 11px;
-        text-align: center;
-      }
-      .attribution a {
-        color: hsl(228, 45%, 44%);
-      }
-    </style>
+    <link rel="stylesheet" href="CSS/normalize.css" />
+    <link rel="stylesheet" href="CSS/styles.css" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600&display=swap"
+      rel="stylesheet"
+    />
   </head>
+
   <body>
     <div class="container">
       <div class="card">
         <div class="card__header">
-          <img src="images/image-equilibrium.jpg" alt="" />
+          <img src="images/image-equilibrium.jpg" alt="Equilibrium" />
+          <div class="overlay">
+            <img
+              class="view_icon"
+              src="images/icon-view.svg"
+              alt="View Icon Over The Hover Effect"
+            />
+          </div>
         </div>
+
         <div class="card__body">
           <h1>Equilibrium #3429</h1>
           <p>Our Equilibrium collection promotes balance and calm.</p>
-        </div>
-        <div class="status">
-          <img src="images/icon-ethereum.svg" alt="" />
-          <span>0.041ETH</span>
 
-          <img src="images/icon-clock.svg" alt="" />
-          <span>3 days left</span>
-        </div>
-        <div class="divider"></div>
-        <div class="creater">
-          <img src="images/image-avatar.png" alt="" />
-          <span class="author_name">Creation of Jules Wyvern</span>
+          <div class="status--grid">
+            <div class="item--1">
+              <img src="images/icon-ethereum.svg" alt="Equilibrium Icon" />
+            </div>
+
+            <div class="item--2">0.041 ETH</div>
+
+            <div class="item--3">
+              <img src="images/icon-clock.svg" alt="Clock Icon" />
+            </div>
+
+            <div class="item--4">3 days left</div>
+          </div>
+
+          <div class="divider"></div>
+
+          <div class="creater">
+            <img src="images/image-avatar.png" alt="user of the post" />
+            <p>Creation of <span class="author_name">Jules Wyvern</span></p>
+          </div>
         </div>
       </div>
-    </div>
-
-    <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
     </div>
   </body>
 </html>
